--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@supabase/auth-helpers-sveltekit": "^0.10.0",
 		"@supabase/auth-ui-shared": "^0.1.6",
 		"@supabase/auth-ui-svelte": "^0.2.2",
-		"@supabase/supabase-js": "^2.24.0"
+		"@supabase/supabase-js": "^2.24.0",
+		"@vercel/analytics": "^1.0.1"
 	}
 }
