--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"supabase": "^1.64.8",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"svelte-fa": "^3.0.4",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -46,6 +47,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fortawesome/free-brands-svg-icons": "^6.4.0",
+		"@fortawesome/free-solid-svg-icons": "^6.4.0",
 		"@supabase/auth-helpers-sveltekit": "^0.10.0",
 		"@supabase/auth-ui-shared": "^0.1.6",
 		"@supabase/auth-ui-svelte": "^0.2.2",
